@@ -56,34 +56,34 @@ Config::Model::Node - Class for configuration tree node
 
 =head1 SYNOPSIS
 
- $model->create_config_class 
-  (
-   name              => 'OneConfigClass',
-   class_description => "OneConfigClass detailed description",
+ $model->create_config_class(
+    name              => 'OneConfigClass',
+    class_description => "OneConfigClass detailed description",
 
-   element           => [
-                          [qw/X Y Z/] 
-                          => {
-                               type => 'leaf',
-                               value_type => 'enum',
-                               choice     => [qw/Av Bv Cv/]
-                             }
-                        ],
+    element => [
+        [qw/X Y Z/] => {
+            type       => 'leaf',
+            value_type => 'enum',
+            choice     => [qw/Av Bv Cv/]
+        }
+    ],
 
-   experience        => [ Y => 'beginner', 
-                          X => 'master' 
-                        ],
-   status            => [ X => 'deprecated' ],
-   description       => [ X => 'X-ray description (can be long)' ],
-   summary           => [ X => 'X-ray' ],
+    experience => [
+        Y => 'beginner',
+        X => 'master'
+    ],
+    status      => [ X => 'deprecated' ],
+    description => [ X => 'X-ray description (can be long)' ],
+    summary     => [ X => 'X-ray' ],
 
-   accept            => [ { name_match => 'ip.*',
-                            type => 'leaf',
-                            value_type => 'uniline',
-                            summary => 'ip address',
-                          }
-                        ]
-  );
+    accept => [
+        'ip.*' => {
+            type       => 'leaf',
+            value_type => 'uniline',
+            summary    => 'ip address',
+        }
+    ]
+ );
 
  my $instance = $model->instance (root_class_name => 'OneConfigClass', 
                                   instance_name => 'test1');
@@ -207,29 +207,28 @@ See L<Config::Model::AutoRead> for details.
 
 =item B<accept>
 
-Optional list of criteria to accept unknown parameters. Each criteria will have
-a list of specification that will enable C<Config::Model> to create a model
+Optional list of criteria (i.e. a regular expression to match ) to
+accept unknown parameters. Each criteria will have a list of
+specification that will enable C<Config::Model> to create a model
 snippet for the unknown element.
 
 Example:
 
-  accept =>      [
-                    {
-                            name_match => 'list.*',
-                            type => 'list',
-                            cargo => {
-                                        type => 'leaf',
-                                        value_type => 'string',
-                                     } ,
-                     },
-                     {
-                            name_match => 'str.*',
-                            type => 'leaf',
-                            value_type => 'uniline'
-                     },
-                  ]
+ accept => [
+    'list.*' => {
+        type  => 'list',
+        cargo => {
+            type       => 'leaf',
+            value_type => 'string',
+        },
+    },
+    'str.*' => {
+        type       => 'leaf',
+        value_type => 'uniline'
+    },
+  ]
 
-All C<element> parameter and C<name_match> can be used for C<accept>.
+All C<element> parameters can be used in specifuing accepted parameters.
 
 =for html
 <p>For more information, see <a href="http://ddumont.wordpress.com/2010/05/19/improve-config-upgrade-ep-02-minimal-model-for-opensshs-sshd_config/">this blog<\a>.</p>
